--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "aunties"
+name = "aunts"
 version = "0.1.0"
 description = ""
 authors = ["corymosiman12 <cory.mosiman12@gmail.com>"]
